fix: updated return types of all endpoints to member dto